Bug 315333 - ‘some of the time’ means duration, not frequency
Summary: ‘some of the time’ means duration, not frequency
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Unassigned bugs
URL: https://bugs.kde.org/show_bug.cgi?id=...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-17 16:58 UTC by Christopher Yeleighton
Modified: 2013-02-18 00:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christopher Yeleighton 2013-02-17 16:58:11 UTC
The automatic text ‘some of the time’ inserted into crash reports means how long, not how often.

Reproducible: Always

Steps to Reproduce:
  1. Report a crash that happens sometimes.

Actual Results:  
  1. ‘The crash can be reproduced some of the time.’

Expected Results:  
  1. ‘The crash can be reproduced sometimes.’
Comment 1 Jekyll Wu 2013-02-18 00:08:47 UTC
Git commit 5b968b0b8dd84b30a7fc01ed810ea52ca9b07182 by Jekyll Wu.
Committed on 18/02/2013 at 01:03.
Pushed by jekyllwu into branch 'KDE/4.10'.

Use better wording to describe crashes that happen sometimes.

The related sentence is intentionally not i18nized, so it is safe
to modify it on stable branch.
FIXED-IN: 4.10.1

M  +1    -1    drkonqi/reportinterface.cpp

http://commits.kde.org/kde-runtime/5b968b0b8dd84b30a7fc01ed810ea52ca9b07182