Use better wording to describe crashes that happen sometimes.

The related sentence is intentionally not i18nized, so it is safe
to modify it on stable branch.

BUG: 315333
FIXED-IN: 4.10.1